# math-utils

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  README.md  build.sh  install.sh
src/: abs.c++  abs.hpp  abs.hpp.in  absval.c++  absval.h++  absval.h++.in  add.c++  add.h++  add.h++.in  add.hpp  add.hpp.in  avg.hpp  cos.c++  cos.hpp  cos.hpp.in  div.c++  div.h++  div.hpp.in  dnorm.c++  dnorm.h++.in  dnorm.hpp  dnorm.hpp.in  e.c++  e.h++.in  e.hpp  log.c++  log.hpp  log.hpp.in  log10.c++  log10.hpp  log10.hpp.in  mean.c++  mean.hpp  mean.hpp.in  median.c++  median.hpp  median.hpp.in  mult.c++  mult.h++  mult.h++.in  (+22 more)
